# docxconverter

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  TESTING_GUIDE.md  config-overrides.js  example-api-call.html  netlify.toml  package-lock.json  package.json
image.resize/wasm/: Cargo.toml  README.md  build.ps1  build.sh
image.resize/wasm/src/: lib.rs
netlify/functions/: README.md  resolve-url.js
public/: index.html  manifest.json
src/: App.css  App.js
src/assets/styles/: copy-button-improvements.md  fb-reels.css  style.css  style.css.map  style.scss
src/components/: Bbcode.jsx  Bbcodev1.jsx  Content.jsx  ErrorBoundary.jsx  Home.jsx  Html.jsx  ImageResize.jsx  ImageResizeCanvas.jsx  Scss.jsx  dropdown-improvements.md
src/utils/: addQAHeadingClass.js  cleanGutenbergTables.js  cleanGutenbergTables.sample.html  cleanGutenbergTables.test.js  cleanImageAltText.js  convertReadMoreLinks.js  convertReadMoreToBlock.js  convertTableToButton.js  convertYouTubeLinksToEmbed.CHANGELOG.md  convertYouTubeLinksToEmbed.README.md  convertYouTubeLinksToEmbed.js  convertYouTubeLinksToEmbed.sample.html  convertYouTubeLinksToEmbed.test.js  convertYouTubeLinksToWPEmbedWithCaption.QUICKSTART.md  convertYouTubeLinksToWPEmbedWithCaption.README.md  convertYouTubeLinksToWPEmbedWithCaption.js  convertYouTubeLinksToWPEmbedWithCaption.sample.html  convertYouTubeToEmbedHTML.README.md  convertYouTubeToEmbedHTML.examples.js  convertYouTubeToEmbedHTML.js  convertYouTubeToEmbedHTML.test.js  removeAltText.js
(+4 files in other folders)
