[package]
name = "image-resize-wasm"
version = "0.1.0"
authors = ["Image Resize WASM"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fast_image_resize = { path = "..", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "ImageData",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"  # Optimize for size
lto = true










